--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,5 @@ crispy-bootstrap5==2024.2
 psycopg2-binary==2.9.9
 gunicorn==21.2.0
 whitenoise==6.6.0
-django-environ==0.11.2 
+django-environ==0.11.2
+dj-database-url==2.1.0 
