Fix deployment configuration

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DJANGO_SECRET_KEY=your-secret-key-here
+DJANGO_SECRET_KEY=django-insecure-8x#v=6$q9#k4$m2$p5$n7$r3$t1$w9$y5$b7$d3$f1$h9$j5$l7$n3$p1$r9$t5$v7$x3$z1
 DJANGO_DEBUG=True
 DJANGO_ALLOWED_HOSTS=localhost,127.0.0.1
 DATABASE_URL=sqlite:///db.sqlite3 
