--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: bank-management-system
     env: python
     buildCommand: chmod +x build.sh && ./build.sh
-    startCommand: gunicorn bankingsystem.wsgi:application
+    startCommand: gunicorn bankingsystem.wsgi:application --log-file -
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.7
@@ -15,6 +15,8 @@ services:
         value: .onrender.com
       - key: DATABASE_URL
         value: sqlite:///db.sqlite3
+      - key: PYTHONPATH
+        value: /opt/render/project/src
 
 databases:
   - name: bank-db
